--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,7 +92,7 @@ p {
 	margin-top: 100px;
 	width: 400px;
 	position: fixed;
-	right: 100px;
+	right: 150px;
 	border: 1px solid #cccccc;
 }
 
@@ -146,10 +146,90 @@ input[type=submit] {
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
-    cursor: pointer;
     margin-left: 25px;
 }
 
 input[type=submit]:hover {
     background-color: #45a049;
+    cursor: pointer;
+}
+
+.box1 {
+	float:left;
+	margin-left: 40px;
+	margin-top: 20px;
+}
+
+#nature {
+	color: #ffffff;
+	background-color: #4aaaaf;
+	position: absolute;
+	margin: 0;
+	padding: 20px 96px;
+	top: 240px;
+	width: 58px;
+}
+
+.box2 {
+	float: right;
+	margin-right: 40px;
+	margin-top: 20px;
+}
+
+#planet {
+	color: #ffffff;
+	background-color: #4aaaaf;
+	position: absolute;
+	margin: 0;
+	padding: 20px 96px;
+	top: 240px;
+	width: 58px;
+}
+
+.box3 {
+	float:left;
+	margin-left: 40px;
+	margin-top: 20px;
+}
+
+#sport {
+	color: #ffffff;
+	background-color: #4aaaaf;
+	position: absolute;
+	margin: 0;
+	padding: 20px 96px;
+	top: 445px;
+	width: 58px;
+}
+
+.box4 {
+	float: right;
+	margin-right: 40px;
+	margin-top: 20px;
+}
+
+#music {
+	color: #ffffff;
+	background-color: #4aaaaf;
+	position: absolute;
+	margin: 0;
+	padding: 20px 96px;
+	top: 445px;
+	width: 58px;
+}
+
+.box5 {
+	float:left;
+	margin-left: 40px;
+	margin-top: 20px;
+}
+
+#tesla {
+	color: #ffffff;
+	background-color: #4aaaaf;
+	position: absolute;
+	margin: 0;
+	padding: 20px 96px;
+	top: 650px;
+	width: 58px;
 }
