--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,235 +1,239 @@
 body {
-	background-image: url(../images/cloudy-day.png);
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 18px;
+  line-height: 34px;
+  color: #777;
+  background: url("../images/cloudy-day.png");
 }
 
-section {
-	background-color: #ffffff;
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	width: 100%;
-	position: fixed;
-	top: 0;
-	left: 0;
-	border-bottom: 1px solid #cccccc;
+* {
+  box-sizing: border-box;
+}
+
+/* general */
+
+.container {
+  width: 100%;
+  max-width: 960px;
+  margin: 0 auto;
+  clear: both;
+}
+
+h1,
+h2,
+h3,
+p {
+  margin-bottom: 20px;
+}
+
+p:last-child {
+  margin-bottom: 0;
+}
+
+h1,
+h2,
+h3 {
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-weight: 700;
+  color: #4aaaa5;
 }
 
 h1 {
-	font-family: 'Georgia', Times, Times New Roman, serif;
-	font-size: 30px;
-	background-color: #4aaaa5;
-	color: white;
-	width: 220px;
-	text-align: center;
-	margin-left: 100px;
-	position: absolute;
-	margin-top: 0;
-	padding: 11px;
-	border: 1px dashed green;
+  padding-bottom: 20px;
+  font-size: 30px;
+  line-height: 49px;
+  border-bottom: 3px solid #ddd;
 }
 
-.nav {
-	font-size: 15px;
-	position: relative;
-	float: right;
-	right: 80px;
-	padding: 20px;
+h2,
+h3 {
+  font-size: 22px;
 }
 
-a {
-	text-decoration: none;
-	color: black;
+/* header */
+
+#masthead {
+  position: fixed;
+  z-index: 99;
+  width: 100%;
+  margin: 0 0 30px;
+  overflow: auto;
+  color: #fff;
+  background: #fff;
+  border-bottom: 2px solid #ccc;
 }
 
-#about {
-	display: inline;
-	margin-right: 0px;
+#logo {
+  float: left;
+  width: 250px;
+  height: 90px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 90px;
+  color: #fff;
+  text-align: center;
+  text-decoration: none;
+  background: #4aaaa5;
 }
 
-#portfolio {
-	display: inline;
-	border-left: thin solid grey;
-	padding-left: 30px;
+nav {
+  float: right;
+  margin-top: 25px;
 }
 
-#contact {
-	display: inline;
-	border-left: thin solid grey;
-	padding-left: 20px;
+nav a {
+  display: inline-block;
+  padding-left: 15px;
+  margin-left: 15px;
+  line-height: 18px;
+  color: #999;
+  text-decoration: none;
+  border-left: 1px solid #efefef;
 }
 
-.container {
-	text-align: left;
-	line-height: 30px;
-	margin-top: 100px;
-	margin-left: 100px;
-	float: left;
-	width: 650px;
-	background-color: #ffffff;
-	padding: 10px;
-	border: 1px solid #cccccc;
-	position: absolute;
+nav a:first-child {
+  border-left: 0 none;
 }
 
-h2 {
-	color: #4aaaa5;
-	font-size: 30px;
-	margin-left: 30px;
-}
-
-#profile {
-	float: left;
-	margin: 10px 20px auto 20px;
-	width: 200px;
-	height: 275px;
-}
-
-p {
-	margin: 10px 20px auto 20px;
-}
-
-.connect {
-	float: right;
-	background-color: #ffffff;
-	margin-top: 100px;
-	width: 400px;
-	position: fixed;
-	right: 150px;
-	border: 1px solid #cccccc;
-}
-
-#github {
-	margin-top: 10px;
-	margin-left: 40px;
-	width: 75px;
-	height: 75px;
-
-}
-
-#linkedin {
-	width: 75px;
-	height: 75px;	
-	margin-left: 40px;
-}
-
-#facebook {
-	width: 75px;
-	height: 75px;
-	margin-left: 40px;
-}
+/* footer */
 
 footer {
-	background-color: #666666;
-	position: fixed;
-	bottom: 0;
-	left: 0;
-	text-align: center;
-	width: 100%;
-	padding: 50px 0;
-	border-top: 5px solid #4aaaa5;
+  padding: 30px 0;
+  clear: both;
+  font-size: 12px;
+  color: #fff;
+  color: #ccc;
+  text-align: center;
+  background: #666;
+  border-top: 8px solid #4aaaa5;
 }
 
-h3 {
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	line-height: 0;
-	margin-left: 25px;
+/* sidebar */
+
+.sidebar {
+  float: right;
+  width: 100%;
+  max-width: 270px;
+  padding: 30px;
+  margin-bottom: 20px;
+  background: #fff;
+  border: 1px solid #ddd;
 }
 
-input[type=text], select, textarea {
-    width: 90%; 
-    padding: 10px; 
-    border: 1px solid #ccc; 
-    margin-left: 25px;
+h3,
+.sidebar h2 {
+  padding-bottom: 20px;
+  margin-bottom: 15px;
+  line-height: 22px;
+  border-bottom: 2px solid #eee;
+}
+
+.social {
+  width: 62px;
+  height: 62px;
+  margin-top: 8px;
+  margin-right: 5px;
+}
+
+.social:last-child {
+  margin-right: 0;
+}
+
+/* main */
+
+#main-container {
+  padding-top: 130px;
+}
+
+.main-section {
+  float: left;
+  width: 100%;
+  max-width: 650px;
+  padding: 30px;
+  margin: 0 0 40px;
+  background: #fff;
+  border: 1px solid #ddd;
+}
+
+/* portfolio page */
+
+.work {
+  position: relative;
+  float: left;
+  width: 274px;
+  margin: 20px 0 25px;
+  overflow: auto;
+}
+
+.work:nth-child(even) {
+  margin-right: 40px;
+}
+
+.work img {
+  width: 100%;
+  border: 0 none;
+  opacity: 0.8;
+}
+
+.work h3 {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  padding: 15px;
+  margin-bottom: 0;
+  font-weight: 300;
+  line-height: 30px;
+  color: #fff;
+  text-align: center;
+  background: #4aaaa5;
+  border-bottom: 0;
+}
+
+.auth-image {
+  float: left;
+  width: 200px;
+  height: auto;
+  margin-top: 10px;
+  margin-right: 25px;
+}
+
+/* contact page */
+
+#contact-form ul {
+  margin-bottom: 20px;
+}
+
+#contact-form li {
+  margin-bottom: 10px;
+}
+
+label,
+input[type=text],
+input[type=email],
+textarea {
+  display: block;
+  width: 100%;
+}
+
+input[type=text],
+input[type=email],
+textarea {
+  height: 35px;
+  padding: 0 10px;
+  font-size: 14px;
+  border: 1px solid #ddd;
+}
+
+textarea {
+  height: 200px;
 }
 
 input[type=submit] {
-    background-color: #4CAF50;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    margin-left: 25px;
-}
-
-input[type=submit]:hover {
-    background-color: #45a049;
-    cursor: pointer;
-}
-
-.box1 {
-	float:left;
-	margin-left: 40px;
-	margin-top: 20px;
-}
-
-#nature {
-	color: #ffffff;
-	background-color: #4aaaaf;
-	position: absolute;
-	margin: 0;
-	padding: 20px 96px;
-	top: 240px;
-	width: 58px;
-}
-
-.box2 {
-	float: right;
-	margin-right: 40px;
-	margin-top: 20px;
-}
-
-#planet {
-	color: #ffffff;
-	background-color: #4aaaaf;
-	position: absolute;
-	margin: 0;
-	padding: 20px 96px;
-	top: 240px;
-	width: 58px;
-}
-
-.box3 {
-	float:left;
-	margin-left: 40px;
-	margin-top: 20px;
-}
-
-#sport {
-	color: #ffffff;
-	background-color: #4aaaaf;
-	position: absolute;
-	margin: 0;
-	padding: 20px 96px;
-	top: 445px;
-	width: 58px;
-}
-
-.box4 {
-	float: right;
-	margin-right: 40px;
-	margin-top: 20px;
-}
-
-#music {
-	color: #ffffff;
-	background-color: #4aaaaf;
-	position: absolute;
-	margin: 0;
-	padding: 20px 96px;
-	top: 445px;
-	width: 58px;
-}
-
-.box5 {
-	float:left;
-	margin-left: 40px;
-	margin-top: 20px;
-}
-
-#tesla {
-	color: #ffffff;
-	background-color: #4aaaaf;
-	position: absolute;
-	margin: 0;
-	padding: 20px 96px;
-	top: 650px;
-	width: 58px;
+  padding: 10px 30px;
+  font-size: 18px;
+  color: #fff;
+  cursor: pointer;
+  background: #4aaaa5;
+  border: 0 none;
 }
